docs/v0.32.0/_sources/gallery/tutorials/index.rst.txt
:orphan:

Examples: Tutorials
===================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to set up and run a flow cytometry simulation using the FacsCanto instance from the FlowCyPy library. It includes defining a particle population, configuring the flow cytometer, running the simulation, and visualizing the results.">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_facs_canto_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_facs_canto.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flow Cytometry Simulation: FacsCanto System</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example simulates the detection of small nanoparticles (90–150 nm diameter) in a flow cytometry setup using a dual-detector configuration (side and forward scatter). The simulation includes noise models, realistic fluidics, analog signal conditioning, digitization, triggering, and peak detection.">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_limit_of_detection_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_limit_of_detection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Limit of Detection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to apply signal processing techniques to flow cytometry data using FlowCyPy. The simulation is set up with a Gaussian beam, a flow cell, and two detectors. A single population of scatterers (with delta distributions) is used, and the focus here is on processing the forward scatter detector signals. Three acquisitions are performed:">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_signal_processing_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_signal_processing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Signal Processing in Flow Cytometry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates a complete flow cytometry simulation using the FlowCyPy library. It models fluidics, optics, signal processing, and classification of multiple particle populations.">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flow Cytometry Simulation: Full System Example</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/facs_canto
   /gallery/tutorials/limit_of_detection
   /gallery/tutorials/signal_processing
   /gallery/tutorials/workflow



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
